<resources>
    <string name="app_name">Biker</string>

    <string name="title_activity_main">Biker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="email_label" translatable="false">E-mail:</string>
    <string name="points_label">Points:</string>

    <string name="logout">logout</string>
    <string name="start_itinerary">Start Itinerary</string>
    <string name="go_to_your_profile">Go to your Profile</string>
    <string name="history">Tracking History</string>
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="save_credentials">save credentials</string>
    <string name="login" translatable="false">Login</string>
    <string name="subscribe">Subscribe</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="title_activity_login">Sign in</string>
    <string name="google_maps_api" translatable="false">AIzaSyCdvmG7bkPICAT-3kZ3HMW2Tp8k7eJJXJU</string>

    <string name="start_tracking">Start Tracking</string>
    <string name="email" translatable="false">E-mail</string>

    <string name="speed">Speed</string>
    <string name="altitude">Altitude</string>
    <string name="distance">Distance</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="end_tracking">Stop Tracking</string>
    <string name="default_value_text_view">000</string>
    <string name="points">Points</string>
    <string name="position">Position</string>
    <string name="title_activity_list">History</string>
    <string name="average_speed">Average Speed</string>
    <string name="total_distance">Total Distance</string>
    <string name="points_gained">Gained Points</string>
    <string name="average_altitude">Average Altitude</string>
    <string name="list_of_sessions">History</string>
    <string name="title_activity_percorso">Itinerary</string>
    <string name="saveItinerary">Save</string>
    <string name="discardItinerary">Discard</string>
    <string name="profile">Go to profile</string>
    <string name="fake_positions">fake positions</string>
    <string name="see_more">See More</string>
    <string name="email_not_inserted">insert an email here</string>
    <string name="password_not_inserted">insert password here</string>
    <string name="start">Start time:</string>
    <string name="end">End time: </string>
    <string name="unsubscribe">unsubscribe</string>
    <string name="day">Day: </string>
    <string name="user_not_subscribed">Subscribe or insert valid credentials</string>
    <string name="json_error">There has been a problem during the login. Please try again</string>
    <string name="rete_error">Network error. Please try again</string>
    <string name="logging_in">Loggin in…</string>
    <string name="generic_error">Error</string>
    <string name="user_already_subscribed">User already subscribed</string>
    <string name="please_retry">Please retry</string>
    <string name="subscribing">Subscribing…</string>
    <string name="gps">GPS</string>
    <string name="NETWORK">Network</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="modifiy_password">modifiy password</string>
    <string name="notification_message">Biker is tracking you</string>
    <string name="close">Close</string>
    <string name="continua">Continue</string>
    <string name="time_start">Started at:</string>
    <string name="time_end">Ended at:</string>
    <string name="negozi">Shops</string>
    <string name="title_premio_list">Rewards</string>
    <string name="title_premio_detail">Reward Detail</string>
    <string name="compra_premio">BUY</string>
    <string name="see_rewards">See Rewards</string>
    <string name="title_activity_premi">Rewards</string>
    <string name="price">Price</string>
    <string name="quantità">Remaining</string>
    <string name="data_acquisto">Purchase date:</string>
    <string name="costo_premio">Reward price:</string>
    <string name="negozio">Shop:</string>
    <string name="acquisti">Rewards History</string>

</resources>
