<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_white_rounded"
    android:orientation="horizontal">


    <Button
        android:id="@+id/button_compra_premio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/quantità_premio"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@color/primary_dark"
        android:text="@string/compra_premio"
        android:textColor="@color/almost_white" />

    <TextView
        android:id="@+id/nome_acquisto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@color/accent"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/quantità_premio"
        android:layout_below="@+id/nome_acquisto"
        android:text="@string/quantità"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/prezzo_premio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView13"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/quantità_premio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView6"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/prezzo_premio"
        android:layout_below="@+id/nome_acquisto"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/price"
        android:textAlignment="center"
        android:textSize="18sp" />
</RelativeLayout>
